Category create endpooint added
